# ankic

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  wtmp.txt
anki_connector/: __init__.py  __main__.py  cli.py  exceptions.py  logging_config.py
anki_connector/config/: __init__.py  settings.py
anki_connector/core/: __init__.py  anki_client.py  audio_downloader.py  constants.py  container.py  factory.py  interfaces.py  text_processor.py  vocabulary_fetcher.py  vocabulary_processor.py
anki_connector/enrichment/: mw_enricher.py
anki_connector/models/: __init__.py  anki_models.py  cache_models.py  word_info.py  word_models.py
anki_connector/templates/: __init__.py  card_template.py  loader.py
anki_connector/templates/assets/: audio-controls.js
anki_connector/templates/base/: back_base.html.j2  front_base.html.j2  style.css.j2  style_base.css.j2
anki_connector/templates/base/partials/: mw_content_standalone.html.j2  mw_structured_content.html.j2  (+4 more)
anki_connector/utils/: __init__.py  cache_engine.py  cache_manager.py  error_handler.py
tests/: test_cache_manager.py  test_cli.py  test_html_parsing.py  test_integration_scenarios.py  test_integration_scenarios.py.bak  test_mw_enricher.py  test_mw_official_mode.py  test_text_processor.py  test_vocabulary_fetcher.py  test_vocabulary_processor.py
tests/data/: advanced_words.txt  mixed_content.txt  sample_words.txt
tests/source/: Merriam-WebsterResponse.md  mw_word_buffer_collegiate_response.json  mw_word_design_collegiate_response.json  mw_word_project_collegiate_response.json  mw_word_project_thesaurus_response.json  mw_word_verify_collegiate_response.json  vocab_word_buffer_ajax_result.html  vocab_word_design_ajax_result.html  vocab_word_nebulous.html  vocab_word_project_ajax_result.html  vocab_word_tumult.html  vocab_word_up.html
(+5 files in other folders)
